# realm_executable

./: CMakeLists.txt  README.md
include/realm_ros/: grabber_exiv2_node.h  stage_node.h
src/: stage_node_main.cpp
src/realm_ros_lib/: grabber_exiv2_node.cpp  stage_node.cpp
tools/: bin_vocabulary.cc
